crates/ohno_macros_impl/src/enrich_err/snapshots/ohno_macros_impl__enrich_err__tests__a_missing_return_type_is_rejected.snap
---
source: crates/ohno_macros_impl/src/enrich_err/mod/tests.rs
expression: "rendered(quote!(\"failed\"), parse_quote!(fn load() {}))"
---
::core::compile_error! {
    "`#[enrich_err(...)]` needs a return type to enrich. A function returning `()` has no error to carry the message"
}
fn load() {}
