crates/ohno_macros_impl/src/enrich_err/snapshots/ohno_macros_impl__enrich_err__tests__a_non_literal_first_argument_is_rejected.snap
---
source: crates/ohno_macros_impl/src/enrich_err/mod/tests.rs
expression: "rendered(quote!(not_a_literal),\nparse_quote!(fn load() -> Result<(), MyError> { todo!() }))"
---
::core::compile_error! {
    "expected string literal"
}
fn load() -> Result<(), MyError> {
    todo!()
}
