crates/ohno_macros_impl/src/enrich_err/snapshots/ohno_macros_impl__enrich_err__tests__a_self_prefixed_argument_is_left_alone.snap
---
source: crates/ohno_macros_impl/src/enrich_err/mod/tests.rs
expression: "rendered(quote!(\"counter {}\", self.counter),\nparse_quote!(fn load(&self) -> Result<(), MyError> { todo!() }))"
---
fn load(&self) -> Result<(), MyError> {
    let __ohno_result = (|| { todo!() })();
    __ohno_result
        .map_err(|mut __ohno_error| {
            ::ohno::Enrichable::add_enrichment(
                &mut __ohno_error,
                ::ohno::EnrichmentEntry::new(
                    ::std::format!("counter {}", self.counter),
                    ::core::file!(),
                    ::core::line!(),
                ),
            );
            __ohno_error
        })
}
