crates/ohno_macros_impl/src/enrich_err/snapshots/ohno_macros_impl__enrich_err__tests__an_inline_capture_goes_through_format.snap
---
source: crates/ohno_macros_impl/src/enrich_err/mod/tests.rs
expression: "rendered(quote!(\"failed for {path}\"),\nparse_quote!(fn load(path: &str) -> Result<(), MyError> { todo!() }))"
---
fn load(path: &str) -> Result<(), MyError> {
    let __ohno_result = (|| { todo!() })();
    __ohno_result
        .map_err(|mut __ohno_error| {
            ::ohno::Enrichable::add_enrichment(
                &mut __ohno_error,
                ::ohno::EnrichmentEntry::new(
                    ::std::format!("failed for {path}"),
                    ::core::file!(),
                    ::core::line!(),
                ),
            );
            __ohno_error
        })
}
