crates/ohno_macros_impl/src/enrich_err/snapshots/ohno_macros_impl__enrich_err__tests__the_body_runs_inside_a_closure.snap
---
source: crates/ohno_macros_impl/src/enrich_err/mod/tests.rs
expression: "rendered(quote!(\"failed\"),\nparse_quote!(fn load() -> Result<(), MyError> { Err(MyError::new()) }))"
---
fn load() -> Result<(), MyError> {
    let __ohno_result = (|| { Err(MyError::new()) })();
    __ohno_result
        .map_err(|mut __ohno_error| {
            ::ohno::Enrichable::add_enrichment(
                &mut __ohno_error,
                ::ohno::EnrichmentEntry::new("failed", ::core::file!(), ::core::line!()),
            );
            __ohno_error
        })
}
