crates/ohno_macros_impl/src/enrich_err/snapshots/ohno_macros_impl__enrich_err__tests__the_signature_survives_untouched.snap
---
source: crates/ohno_macros_impl/src/enrich_err/mod/tests.rs
expression: "rendered(quote!(\"failed\"), parse_quote!\n{\n    #[doc = r\" Documented.\"] pub unsafe extern \"C\" fn load<T:\n    Clone>(&mut self, value: T) -> Result<T, MyError> where T: Send,\n    { todo!() }\n})"
---
/// Documented.
pub unsafe extern "C" fn load<T: Clone>(&mut self, value: T) -> Result<T, MyError>
where
    T: Send,
{
    let __ohno_result = (|| { todo!() })();
    __ohno_result
        .map_err(|mut __ohno_error| {
            ::ohno::Enrichable::add_enrichment(
                &mut __ohno_error,
                ::ohno::EnrichmentEntry::new("failed", ::core::file!(), ::core::line!()),
            );
            __ohno_error
        })
}
